chore(AppHeader.tsx): add margin-bottom of 12.7rem for larger screens to improve spacing chore(AppLayout.tsx): change min-width of Main component to 100vw to ensure full width on all screens chore(AppLayout.tsx): remove commented out code and add overflow: hidden for larger screens to improve layout chore(SocialNav.tsx): update href for GitHub link to point to my GitHub profile chore(SocialNav.tsx): update href for Frontend Mentor link to point to my Frontend Mentor profile chore(global.css): remove commented out code and add max-width of 111rem and margin: 0 auto for larger screens to improve layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,7 +77,9 @@ body {
   }
 
   @media (min-width: 90em) {
-    margin: auto 4rem ;
+    /* margin: auto 4rem; */
+    max-width: 111rem;
+    margin: 0 auto;
   }
 }
 
